[gd_scene load_steps=14 format=3 uid="uid://d32rot7t0d7li"]

[ext_resource type="Script" uid="uid://cjsto0w84ngtc" path="res://scripts/game_manager.gd" id="1_lbhrr"]
[ext_resource type="Script" uid="uid://cbbecpwyhecvp" path="res://scripts/game.gd" id="1_p57ef"]
[ext_resource type="PackedScene" uid="uid://ny8jlx2fnvv" path="res://scenes/player.tscn" id="1_uwrxv"]
[ext_resource type="PackedScene" uid="uid://8rwdhh8amvjx" path="res://scenes/zombie.tscn" id="3_lnu2h"]
[ext_resource type="Texture2D" uid="uid://canctlbg0kyn6" path="res://assets/images_JPEG/Bg.png" id="4_gee14"]
[ext_resource type="PackedScene" uid="uid://bqe26upgcsi57" path="res://hud.tscn" id="4_p57ef"]
[ext_resource type="AudioStream" uid="uid://bctvoixf67ak5" path="res://assets/sons/pistol_shot.mp3" id="4_vtaks"]
[ext_resource type="AudioStream" uid="uid://bqhd1oywh2dk2" path="res://assets/sons/pixel-explosion-319166.mp3" id="5_dinhu"]
[ext_resource type="PackedScene" uid="uid://cunboldvy75fe" path="res://scenes/zombie_2.tscn" id="5_iywne"]
[ext_resource type="PackedScene" uid="uid://bmoisodpieg6w" path="res://scenes/game_over_screen.tscn" id="5_u5sy4"]
[ext_resource type="AudioStream" uid="uid://bj06vsq37ggvu" path="res://assets/sons/Zombie_die.mp3" id="6_kvuet"]
[ext_resource type="AudioStream" uid="uid://dyd1cjpbm6xri" path="res://assets/sons/fighter-269805.mp3" id="9_0tnpc"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_uwrxv"]

[node name="Game" type="Node2D"]
script = ExtResource("1_p57ef")
enemy_scenes = Array[PackedScene]([ExtResource("3_lnu2h"), ExtResource("5_iywne")])

[node name="SFX" type="Node" parent="."]

[node name="BulletSound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("4_vtaks")
volume_db = 3.962

[node name="HitSound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("5_dinhu")
volume_db = 1.981

[node name="ZombieDeathSound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("6_kvuet")
volume_db = 3.962

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(963, 541)
scale = Vector2(1, 1)
texture = ExtResource("4_gee14")

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="UILayer" instance=ExtResource("4_p57ef")]
offset_right = 1923.0
offset_bottom = 1077.0

[node name="GameOverScreen" parent="UILayer" instance=ExtResource("5_u5sy4")]
visible = false

[node name="EnemySpawnTimer" type="Timer" parent="."]
autostart = true

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_lbhrr")

[node name="Player" parent="." instance=ExtResource("1_uwrxv")]
position = Vector2(0, -1)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(966, 540)
rotation = -3.14159
scale = Vector2(12.5868, -4.82161)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(970, 1165)
scale = Vector2(11.1009, 6.07615)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0.180165, -14.812)
shape = SubResource("WorldBoundaryShape2D_uwrxv")

[node name="BulletContainer" type="Node2D" parent="."]
position = Vector2(-228, -307)

[node name="ZombieContainer" type="Node2D" parent="."]
position = Vector2(920, -30)

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_0tnpc")
volume_db = -6.933
autoplay = true

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
